--- a/reorganization.tex
+++ b/reorganization.tex
@@ -487,16 +487,16 @@ We say that the torus character pairs $(\algebraicGroup{T},\theta)$ and $(\algeb
 The \emph{geometric Lusztig series} $\LusztigSeries{\algebraicGroup{G}^{\Frobenius}}{s}$ associated to a Frobenius stable geometric conjugacy class $(s) \subset \algebraicGroup{G}^*$ consists of all (equivalence classes of) irreducible representations $\pi$ which appear with non-zero multiplicity in $R_{\algebraicGroup{T}, \theta}$ for some $(T,\theta)$ such that $(s_{\algebraicGroup{T},\theta}) = (s)$.
 
 \begin{center}
-	\begin{tabular}{ c c c c c c}
-		$\algebraicGroup{G}$ & $\algebraicGroup{T} \subset \algebraicGroup{G}$ & $\Frobenius$ action on $\CharacterLattice{\algebraicGroup{T}}$ & $\algebraicGroup{G}^{\ast}$ & $\algebraicGroup{T}^{\ast} \subset \algebraicGroup{G}^{\ast}$  \\
-		$\algebraicGroup{\UnitaryGroup}_n$ & $(\algebraicGroup{\UnitaryGroup}_1)^{n}$ & $\left(-1\right)^{\times n}$ & $\algebraicGroup{\UnitaryGroup}_n$ &  $(\algebraicGroup{\UnitaryGroup}_1)^{n}$ \\		 
-		$\algebraicGroup{\SO}_{2n+1}$ & $\multiplcativeScheme^n$ & 1 &$\algebraicGroup{\Sp_{2n}}$ &  $\multiplcativeScheme^n$ \\	
-		$\algebraicGroup{\Sp}_{2n}$ & $\multiplcativeScheme^n$ & 1 &$\algebraicGroup{\SO}_{2n+1}$ & $\multiplcativeScheme^n$\\  			 
-		$\algebraicGroup{\SO}^{+}_{2n}$ & $\multiplcativeScheme^n$ & 1 &$\algebraicGroup{\SO}^{+}_{2n}$ &  $\multiplcativeScheme^n$ \\
-		$\algebraicGroup{\SO}^{-}_{2n}$ & $\multiplcativeScheme^{n-1} \times \algebraicGroup{\UnitaryGroup}_1$ & $\left(1\right)^{\times {\left(n-1\right)}} \times \left(-1\right)$ &$\algebraicGroup{\SO}^{-}_{2n}$ &  $\multiplcativeScheme^{n-1} \times \algebraicGroup{\UnitaryGroup}_1$ \\
-		$\algebraicGroup{\GSp}_{2n}$ & $\multiplcativeScheme \times \multiplcativeScheme^{n}$ & 1 &$\algebraicGroup{GSpin}_{2n+1}$ &  $\multiplcativeScheme \times \multiplcativeScheme^{n}$ \\
-		$\algebraicGroup{\GSO}^{+}_{2n}$ & $\multiplcativeScheme \times \multiplcativeScheme^{n}$ & 1 & $\algebraicGroup{GSpin}_{2n}^{+}$ &  $\multiplcativeScheme \times \multiplcativeScheme^{n}$ \\
-		$\algebraicGroup{\GSO}^{-}_{2n}$ & $\multiplcativeScheme^{n-1} \times \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$ & $\left(1\right)^{\times {\left(n-1\right)}} \times \sigma^{\ast}$ & $\algebraicGroup{GSpin}_{2n}^{-}$ &  $\multiplcativeScheme^{n-1} \times \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$		 
+	\begin{tabular}{|c|c|c|c|c|c|} \hline
+		$\algebraicGroup{G}$ & $\algebraicGroup{T} \subset \algebraicGroup{G}$ & $\Frobenius$ action on $\CharacterLattice{\algebraicGroup{T}}$ & $\algebraicGroup{G}^{\ast}$ & $\algebraicGroup{T}^{\ast} \subset \algebraicGroup{G}^{\ast}$ \tabularnewline \hline \hline
+		$\algebraicGroup{\UnitaryGroup}_n$ & $(\algebraicGroup{\UnitaryGroup}_1)^{n}$ & $\left(-1\right)^{\times n}$ & $\algebraicGroup{\UnitaryGroup}_n$ &  $(\algebraicGroup{\UnitaryGroup}_1)^{n}$ \tabularnewline \hline		 
+		$\algebraicGroup{\SO}_{2n+1}$ & $\multiplcativeScheme^n$ & 1 &$\algebraicGroup{\Sp_{2n}}$ &  $\multiplcativeScheme^n$ \tabularnewline \hline
+		$\algebraicGroup{\Sp}_{2n}$ & $\multiplcativeScheme^n$ & 1 &$\algebraicGroup{\SO}_{2n+1}$ & $\multiplcativeScheme^n$ \tabularnewline \hline		 
+		$\algebraicGroup{\SO}^{+}_{2n}$ & $\multiplcativeScheme^n$ & 1 &$\algebraicGroup{\SO}^{+}_{2n}$ &  $\multiplcativeScheme^n$ \tabularnewline \hline
+		$\algebraicGroup{\SO}^{-}_{2n}$ & $\multiplcativeScheme^{n-1} \times \algebraicGroup{\UnitaryGroup}_1$ & $\left(1\right)^{\times {\left(n-1\right)}} \times \left(-1\right)$ &$\algebraicGroup{\SO}^{-}_{2n}$ &  $\multiplcativeScheme^{n-1} \times \algebraicGroup{\UnitaryGroup}_1$ \tabularnewline \hline
+		$\algebraicGroup{\GSp}_{2n}$ & $\multiplcativeScheme \times \multiplcativeScheme^{n}$ & 1 &$\algebraicGroup{GSpin}_{2n+1}$ &  $\multiplcativeScheme \times \multiplcativeScheme^{n}$ \tabularnewline \hline
+		$\algebraicGroup{\GSO}^{+}_{2n}$ & $\multiplcativeScheme \times \multiplcativeScheme^{n}$ & 1 & $\algebraicGroup{GSpin}_{2n}^{+}$ &  $\multiplcativeScheme \times \multiplcativeScheme^{n}$ \tabularnewline \hline
+		$\algebraicGroup{\GSO}^{-}_{2n}$ & $\multiplcativeScheme^{n-1} \times \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$ & $\left(1\right)^{\times {\left(n-1\right)}} \times \sigma^{\ast}$ & $\algebraicGroup{GSpin}_{2n}^{-}$ &  $\multiplcativeScheme^{n-1} \times \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$ \tabularnewline \hline
 	\end{tabular}
 \end{center}
 For all the pairs $\algebraicGroup{T} \subset \algebraicGroup{G}$ in this list, the Frobenius root $\Frobenius$ of $\algebraicGroup{G}$ acts trivially on the Weyl group $W\left(\algebraicGroup{T}\right)$. In the last row, $\sigma \colon \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme} \to \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$ is the automorphism $a + b\sqrt{d} \mapsto a - b\sqrt{d}$ where $d \in \multiplicativegroup{\finiteField}$ is a non-square.
