--- a/reorganization.tex
+++ b/reorganization.tex
@@ -418,23 +418,23 @@ Here $\algebraicGroup{T}^{\mathrm{std}}_{\algebraicGroup{G}}$, is split for all 
 		$\algebraicGroup{G}$ & $\algebraicGroup{T}^{\mathrm{std}}_{\algebraicGroup{G}}$ \tabularnewline
 		\hline 
 		\hline 
-		$\algebraicGroup{\GSp}_{2n}$ or $\algebraicGroup{\GSO}^{+}_{2n}$ & $\left\{\left(\lambda, \begin{pmatrix}
+		$\algebraicGroup{\GSp}_{2n}$ or $\algebraicGroup{\GSO}^{+}_{2n}$ & $\left\{\left(\begin{pmatrix}
 			\lambda a\\
 			& a^{\ast}
-		\end{pmatrix}\right) \mid a \in \algebraicGroup{A}_n,\,\, \lambda \in \multiplcativeScheme \right\}$ \tabularnewline
+		\end{pmatrix}, \lambda\right) \mid a \in \algebraicGroup{A}_n,\,\, \lambda \in \multiplcativeScheme \right\}$ \tabularnewline
 		\hline 
-		$\algebraicGroup{\GSO}_{2n}^{-}$ & $\left\{ \left(\algebraicGroup{\aFieldNorm}_{\finiteFieldExtension{2} \slash \finiteField}\left(h\right), \begin{pmatrix}
+		$\algebraicGroup{\GSO}_{2n}^{-}$ & $\left\{ \left(\begin{pmatrix}
 			\algebraicGroup{\aFieldNorm}_{\finiteFieldExtension{2} \slash \finiteField}\left(h\right) a\\
 			& h\\
 			& & a^{\ast}
-		\end{pmatrix}\right) \mid a \in \algebraicGroup{A}_{n-1}\,\, h \in \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme} \right\}$ \tabularnewline
+		\end{pmatrix}, \algebraicGroup{\aFieldNorm}_{\finiteFieldExtension{2} \slash \finiteField}\left(h\right)\right) \mid a \in \algebraicGroup{A}_{n-1}\,\, h \in \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme} \right\}$ \tabularnewline
 		\hline		
 	\end{tabular}
 \end{center}
-Here we realize $\restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$ as $$\restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme} = \left\{ \left(\lambda, \begin{pmatrix}
+Here we realize $\restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$ as $$\restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme} = \left\{ \left(\begin{pmatrix}
 	a & b\\
 	db & a
-\end{pmatrix}\right) \mid a^2 - db^2 = \lambda \in \multiplcativeScheme \right\},$$
+\end{pmatrix}, \lambda\right) \mid a^2 - db^2 = \lambda \in \multiplcativeScheme \right\},$$
 where $d$ is as in \Cref{subsec:isometry-groups}.
 
 \elad{Under construction}
